simpleui-nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simpleui-nodeport
spec:
  type: NodePort
  selector:
    appname: simpleui
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30000
...
