simpleui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simpleui-service
spec: 
  selector:
      appname: simpleui
  ports:
     - protocol: TCP
       port: 8080
       targetPort: 80
       
...
