simpleui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleui-ingress
spec:
  rules:
  - host: myazue.centralindia.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simpleui-service
            port:
              number: 8080

...
